--- a/cloudformation/template.yml
+++ b/cloudformation/template.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
 
-Description: 'KeyCore AWS Organizations API'
+Description: 'AWS Organizations API'
 
 Parameters:
   # API Gateway
